# ABC_task1

./: Task01_Otchet.docx
task1/: CMakeLists.txt  Ts.sln  Ts.vcxproj  Ts.vcxproj.filters  circle.cpp  circle.h  color.cpp  color.h  figure.cpp  figure.h  main.cpp  point.cpp  point.h  rectangle.cpp  rectangle.h  triangle.cpp  triangle.h  vector.cpp  vector.h
task1/Debug/: Ts.exe.recipe  Ts.ilk  Ts.vcxproj.FileListAbsolute.txt  vc142.idb
task1/Debug/Ts.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Ts.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
testanswer/: testanswer01.txt  testanswer02.txt  testanswer03.txt  testanswer04.txt  testanswer05.txt
tests/: test01.txt  test02.txt  test03.txt  test04.txt  test05.txt
